@@ -1,10 +1,9 @@
 package br.com.igor.capitulo4;
 
 import java.net.URI;
-
-import jdk.incubator.http.HttpClient;
-import jdk.incubator.http.HttpRequest;
-import jdk.incubator.http.HttpResponse;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 
 public class Redirect {
 
@@ -13,20 +12,23 @@ public class Redirect {
 		String content = HttpClient.newHttpClient()
 				.send(HttpRequest.newBuilder().uri(new URI("https://google.com/"))
 						.GET().build(), 
-						HttpResponse.BodyHandler.asString()).body();
+						//HttpResponse.BodyHandler.asString()).body();
+						HttpResponse.BodyHandlers.ofString()).body();
 		
 		System.out.println(content);
 		System.out.println("--------------------------------------------------------");
 
 		String content1 = HttpClient.newBuilder()
-			.followRedirects(HttpClient.Redirect.SECURE)
+			//.followRedirects(HttpClient.Redirect.SECURE)
+			.followRedirects(HttpClient.Redirect.NORMAL)
 			.version(HttpClient.Version.HTTP_2)
 			.build()
 			.send(HttpRequest.newBuilder()
 					.uri(new URI("https://google.com/"))
 					.GET()
 					.build(), 
-					HttpResponse.BodyHandler.asString()).body();
+					//HttpResponse.BodyHandler.asString()).body();
+					HttpResponse.BodyHandlers.ofString()).body();
 		
 		System.out.println(content1);
 		
